Added google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ disqus_shortname:   ashirborah-1
 
 # Social
 # if you don't have any of social below, comment the line.
-#google:
+google:
   #plus:            #username
-  #analytics:
+  analytics:        UA-136784075-1
   #verify:
   #ad-client:
   #ad-slot:
