--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ logo:               'assets/img/logo.jpg'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:               https://eagleshot.github.io
-baseurl:            /
+url:                https://eagleshot.github.io
+baseurl:            
 
 # Jekyll
-permalink:          /:title/
+permalink:          pretty
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
